--- a/src/pages/PlayerPage/YTPlayerPage/styles.module.scss
+++ b/src/pages/PlayerPage/YTPlayerPage/styles.module.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lighten(black, 7%);
+    background-color: var(--bg-color);
     box-shadow: 5px 5px 20px 5px black;
 
     .videoTitle {
@@ -47,7 +47,7 @@
     flex-direction: column;
     align-items: center;
 
-    background-color: lighten(black, 20%);
+    background-color: var(--yt-player-list-bg);
     box-shadow: 5px 5px 20px 5px black;
   }
 }
