--- a/src/utils/styles/_colors.scss
+++ b/src/utils/styles/_colors.scss
@@ -7,9 +7,12 @@ $secondaryLight: #ff79ff;
 $secondaryDark: #aa00c7;
 $error: #eb064b;
 
-// dark mode colors
+// dark colors
 // $black: rgb(43, 47, 51);
 $black: lighten(black, 10%);
 $blackLight: #4e4b53;
 $blackDark: lighten(black, 5%);
 $softBlack: #414a4c;
+
+// light colors
+$white: #f7f7f7;
